# rust-web-app-book

./: Cargo.toml
adapter/migrations/: 20241012144741_start.down.sql  20241012144741_start.up.sql
adapter/src/database/: mod.rs
adapter/src/repository/: book.rs  health.rs
kernel/: Cargo.toml
kernel/src/repository/: health.rs
registry/src/: lib.rs
shared/src/: config.rs
src/: main.rs
