[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
shared.workspace = true
async-trait.workspace = true
anyhow.workspace = true
uuid.workspace = true

[workspace.dependencies]
uuid = { version = "1.4.0", features = ["v4", "serde"] }
serde = { version = "1.0.174", features = ["derive"] }
thiserror = "1.0.44"
